@@ -1,6 +1,9 @@
 0.8.0 - XXXX-XX-XX
 ==================
 
+  * Correct the pure-python RSA implementation.  Unfortunately this
+    requires a small backwards-incompatible API change on RSKey objects.
+
 0.7.0 - 2012-07-26
 ==================
 
